--- a/client/bower.json
+++ b/client/bower.json
@@ -7,6 +7,7 @@
         "angular-ui-router": "0.2.10",
         "angular-loader": "1.2.x",
         "angular-mocks": "~1.2.x",
-        "html5-boilerplate": "~4.3.0"
+        "html5-boilerplate": "~4.3.0",
+        "lodash": "~2.4.1"
     }
 }
