--- a/client/bower.json
+++ b/client/bower.json
@@ -1,13 +1,14 @@
 {
-    "name": "open-vote",
-    "description": "Open vote",
-    "version": "0.0.0",
-    "dependencies": {
-        "angular": "1.2.x",
-        "angular-ui-router": "0.2.10",
-        "angular-loader": "1.2.x",
-        "angular-mocks": "~1.2.x",
-        "html5-boilerplate": "~4.3.0",
-        "lodash": "~2.4.1"
-    }
+  "name": "open-vote",
+  "description": "Open vote",
+  "version": "0.9.0",
+  "dependencies": {
+    "angular": "1.2.x",
+    "angular-ui-router": "0.2.10",
+    "angular-loader": "1.2.x",
+    "angular-mocks": "1.2.x",
+    "html5-boilerplate": "4.3.0",
+    "lodash": "2.4.1",
+    "components-font-awesome": "4.2.0"
+  }
 }
